<resources>
    <string name="app_name">feature-user-profile-impl</string>
    <string name="edit">edit</string>
    <string name="send_a_message_btn">send a message</string>
    <string name="instruct">instruct</string>
    <string name="experience_sample">Won 8 Ballon d\'Ors and a World Cup. I have been playing my whole life and been training people for the past 3 years</string>
    <string name="user_info_sample">Male, 36</string>
    <string name="fill_out_application">Start earning money now by filling out an easy application!</string>
    <string name="instruct_others">instruct others</string>
    <string name="male_gender">Male</string>
    <string name="_0">0</string>
    <string name="_300">300</string>
    <string name="min_hourly_rate">0$</string>
    <string name="max_hourly_rate">300$</string>
    <string name="football">Football</string>
    <string name="tell_us_about_your_experience">Tell us about your experience</string>
    <string name="pick_your_specialty">Pick your specialty</string>
    <string name="join_our_community_of_instructors_now">Join our community of instructors now!</string>
    <string name="how_much_money_do_you_want_to_make_in_an_hour">How much money do you want to make in an hour?</string>
    <string name="apply">apply</string>
    <string name="application">Application</string>
    <string name="avg_hourly_rate">100$</string>
    <string name="hourly_rate_broadcast_template">%d$</string>
    <string name="here_you_can_edit_your_profile_information">Here you can edit your profile information!</string>
    <string name="edit_profile">Edit profile</string>
    <string name="save">save</string>
    <string name="new_password">new password</string>
    <string name="instructor_s_bio">instructor\'s bio</string>
    <string name="instructors_bio_label">Instructor\'s bio</string>
    <string name="edit_your_instructors_bio_here">Edit your instructor\'s bio here!</string>
    <string name="next">next</string>
    <string name="current_password">Current password</string>
    <string name="wrong_password">Wrong password</string>
    <string name="new_password_header">New password</string>
    <string name="submit">submit</string>
    <string name="password_has_been_successfully_saved">Password has been successfully saved</string>
    <string name="current_and_new_passwords_are_identical_password_stayed_the_same">Current and new passwords are identical. Password stayed the same</string>
    <string name="file_uploading_error">File uploading error</string>
    <string name="uploading_went_wrong">Uploading the profile image went wrong. Please, try again</string>
    <string name="rate">rate</string>
    <string name="cancel">cancel</string>
    <string name="your_data_has_been_successfully_saved">Your data has been successfully saved</string>
    <string name="your_instructor_s_bio_has_been_successfully_saved">Your instructor\'s bio has been successfully saved</string>
    <string name="describe_your_unique_way_of_training">Describe your unique way of training</string>
    <string name="image_intent_type">image/*</string>
    <string name="rugby">Rugby</string>
    <string name="empty_experience_field_message">It\'s important to tell us something about your experience in the sport you are applying for so your future clients know more about their instructor. It doesn\'t have to be about training others, it can be just about you mastering this sport</string>
    <string name="empty_experience_field">Your experience is important to us</string>
    <string name="experience_field_empty_helper_text">Experience field can\'t be empty</string>
    <string name="allow">allow</string>
    <string name="grant_message">Give our app access to your media to set profile image. You can do it later in settings</string>
    <string name="profile">Profile</string>
    <string name="your_profile">Your Profile</string>
    <string name="delete_profile">Delete profile</string>
    <string name="profile_deleted_successfully">Your profile has been successfully deleted</string>
    <string name="delete">delete</string>
    <string name="delete_profile_question">Are you sure you want to delete your profile? Once you do it there is no way back</string>
    <string name="log_out_question">Do you want to log out of your account?</string>
    <string name="logged_out_success">You\'ve successfully logged out</string>
    <string name="male_gender_mark">M</string>
    <string name="female_gender_mark">F</string>
</resources>
