<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="16dp"
    android:id="@+id/user_info_setting_dialog"
    android:backgroundTint="?attr/backgroundColor"
    app:cardElevation="16dp">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/dialog_question_tv"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_profile_question"
            android:textSize="16sp"
            android:padding="8dp"
            android:fontFamily="@font/inter_semibold"
            android:layout_marginBottom="80dp"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/submit"
            style="@style/DefaultButton"
            android:layout_gravity="end|bottom"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="20dp"
            app:enabled="true" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:backgroundTint="@color/black"
            android:text="@string/cancel"
            android:textAllCaps="true"
            style="@style/DefaultButton"
            android:textColor="?attr/colorOnPrimary"
            android:layout_gravity="start|bottom"
            app:enabled="true"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="20dp"/>

    </FrameLayout>
</androidx.cardview.widget.CardView>

