<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/snow">

    <ImageView
        app:layout_constraintTop_toTopOf="@id/back_tv"
        app:layout_constraintBottom_toBottomOf="@id/back_tv"
        app:layout_constraintEnd_toStartOf="@id/back_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_keyboard_arrow_left_24"/>
    <TextView
        android:id="@+id/back_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="28dp"
        android:fontFamily="@font/inter_bold"
        />

    <TextView
        android:fontFamily="@font/inter_bold"
        android:id="@+id/application_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/application"
        android:textSize="36sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <TextView
        android:id="@+id/join_instructors_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_our_community_of_instructors_now"
        app:layout_constraintTop_toBottomOf="@id/application_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/inter_semibold"/>


    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/specialty_tv"
        android:fontFamily="@font/inter_bold"
        android:text="@string/pick_your_specialty"
        app:layout_constraintTop_toBottomOf="@id/join_instructors_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/specialty_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/specialty_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="24dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxBackgroundColor="@color/cultured"
        app:boxStrokeColor="@color/text_input_box_stroke_color"
        app:hintEnabled="false"
        app:counterMaxLength="50"
        app:startIconDrawable="@drawable/baseline_sports_soccer_24"
        >
        <AutoCompleteTextView
            android:id="@+id/sports_type_autocomplete_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"
            android:fontFamily="@font/inter_regular"
            android:text="@string/football"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            />


    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/experience_tv"
        android:fontFamily="@font/inter_bold"
        android:text="@string/tell_us_about_your_experience"
        app:layout_constraintTop_toBottomOf="@id/specialty_text_input"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/experience_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/experience_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="24dp"
        style="@style/UserInfoFieldTextInputLayout"
        app:counterMaxLength="100"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/experience_et"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:inputType="text|textMultiLine"
            android:gravity="top"
            android:fontFamily="@font/inter_regular"
            android:maxLength="100"
            />


    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/description_tv"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:text="Describe your unique way of training"
        app:layout_constraintTop_toBottomOf="@id/experience_text_input"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/description_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="24dp"
        style="@style/UserInfoFieldTextInputLayout"
        app:counterMaxLength="256"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description_et"
            android:fontFamily="@font/inter_regular"
            android:inputType="text|textMultiLine"
            android:gravity="top"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:maxLength="256"
            />

    </com.google.android.material.textfield.TextInputLayout>



    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/hourly_rate_tv"
        android:fontFamily="@font/inter_bold"
        android:text="@string/how_much_money_do_you_want_to_make_in_an_hour"
        app:layout_constraintTop_toBottomOf="@id/description_text_input"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/hourly_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/hourly_rate_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="24dp"
        style="@style/UserInfoFieldTextInputLayout"
        >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            >
            <TextView
                android:id="@+id/hourly_rate_broadcast_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/avg_hourly_rate"
                android:fontFamily="@font/inter_bold"
                android:textStyle="italic"
                android:textSize="20sp"/>
            <SeekBar
                android:id="@+id/hourly_rate_sb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:layout_below="@id/hourly_rate_broadcast_tv"
                android:max="300"
                android:progress="100"
                android:progressDrawable="@drawable/seekbar_style"
                android:thumb="@drawable/seekbar_custom_thumb"

                >
            </SeekBar>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hourly_rate_sb"
                android:textSize="16sp"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/min_hourly_rate"
                android:layout_marginStart="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hourly_rate_sb"
                android:layout_alignParentEnd="true"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/max_hourly_rate" />
        </RelativeLayout>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/apply_btn"
        style="@style/DefaultButton"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="80dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hourly_text_input"
        android:layout_marginTop="28dp"
        android:text="@string/apply"
        android:textColor="@color/white"
        android:fontFamily="@font/inter_semibold"/>


</androidx.constraintlayout.widget.ConstraintLayout>
